# pilecv4j-opencv-packaging

./: .gitignore  NOTES.md  README.md  Sonatype OSS Ticket.txt  build.sh  fromscratch.sh  package.sh  pom.xml
install-jar/: pom.xml
lib-image-native/: pom.xml
lib-image-native/src/main/java/com/jiminger/image/: CvRasterNative.java
opencv-zip-install/: README.md  pom.xml
package-native/: pom.xml  setup-eclipse.sh
package-native/assemblies/: withlib.xml
package-native/src/main/cpp/: CMakeLists.txt
package-native/src/main/cpp/sources/: CvRasterNative.cpp
package-native/src/main/resources/: com.jiminger.lib.properties  net.dempsy.lib.properties
